Breadcrumb text color fixed on tablet

--- a/carolina_herrera/choose_store.css
+++ b/carolina_herrera/choose_store.css
@@ -38,9 +38,11 @@
   .bw-appointment-header-column.selected a, 
   .bw-appointment-header-column.selected span {
     background-color: #666 !important;
+    color: rgba(0,0,0,0) !important;
   }
   .bw-iframe-container .bw-appointment-header-row .small-5 {
     background-color: #d8d8d8;
+    color: rgba(0,0,0,0) !important;
   }
 }
 @media (max-width: 375px) {
